# Z-ARCHIVED-hscauterize

./: .gitignore  cauterize.hs  example.scm  hscauterize.cabal  hscauterize.hs  main.hs
Data/Cauterize/: Parser.hs  Schema.hs  Specification.hs  Types.hs
Data/Cauterize/Generators/: C.hs
Data/Cauterize/Parser/: Utils.hs
Data/Cauterize/Parsers/: Schema.hs  Utils.hs
Data/Cauterize/Types/: BuiltIn.hs  Field.hs  Schema.hs  Specification.hs  TypeName.hs
support/: cauterize.h
