name:                hscauterize
version:             0.0.0.0
synopsis:            Generate code and types based on a Cauterize schema.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              John Van Enk
maintainer:          vanenkj@gmail.com
copyright:           Copyright 2013, John Van Enk <vanenkj@gmail.com>. All rights reserved.
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Cauterize.Parser, Data.Cauterize.Types, Data.Cauterize.Parser.Utils
  other-modules:       
  build-depends:       base ==4.5.*, text ==0.11.*, parsec ==3.1.*, pretty ==1.1.*, prettyclass ==1.0.*
