name:                hscauterize
version:             0.0.0.0
synopsis:            Generate code and types based on a Cauterize schema.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              John Van Enk
maintainer:          vanenkj@gmail.com
copyright:           Copyright 2013, John Van Enk <vanenkj@gmail.com>. All rights reserved.
category:            Data
build-type:          Simple
cabal-version:       >=1.8
data-files:          support/*.h, support/*.c

executable hscauterize
  ghc-options:         -Wall -O2
  build-depends:       base ==4.*,
                       text ==0.11.*,
                       parsec ==3.1.*,
                       pretty ==1.1.*,
                       prettyclass ==1.0.*,
                       syb ==0.3.*,
                       containers ==0.5.*,
                       mtl ==2.1.2,
                       optparse-applicative ==0.8.*


  main-is:             hscauterize.hs

library
  ghc-options:         -Wall
  exposed-modules:     Data.Cauterize.Parser,
                       Data.Cauterize.Parser.Utils,
                       Data.Cauterize.Schema,
                       Data.Cauterize.Specification,
                       Data.Cauterize.Generators.C
  other-modules:       
  build-depends:       base ==4.*,
                       text ==0.11.*,
                       parsec ==3.1.*,
                       pretty ==1.1.*,
                       prettyclass ==1.0.*,
                       syb ==0.3.*,
                       containers ==0.5.*,
                       mtl ==2.1.2
